--- a/views/header.hbs
+++ b/views/header.hbs
@@ -1,4 +1,4 @@
-<div id="navbar">
+{{!-- <div id="navbar">
     <ul>
         <li>
             <a href="./apod.hbs"> NASA Pic a day</a>
@@ -10,4 +10,4 @@
             <a href="./swapi.hbs"> Random StarWars Chracter</a>
         </li>
     </ul>
-</div>
+</div> --}}
