--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,7 +7,19 @@
     <title>API Challenge</title>
 </head>
 <body id='body'>
-    <Navbar/>
+    <div id="navbar">
+        <ul>
+            <li class="navItem">
+                <a href="/apod"> NASA Pic a day</a>
+            </li>
+            <li class="navItem">
+                <a href="/poke"> Random Pokemon</a>
+            </li>
+            <li class="navItem">
+                <a href="/starwars"> Random StarWars Chracter</a>
+            </li>
+        </ul>
+    </div>
     {{{body}}}
 </body>
 </html>
