--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,17 +7,17 @@
     <title>API Challenge</title>
 </head>
 <body id='body'>
-    <div id="navbar">
-        <ul>
-            <li class="navItem">
+    <div>
+        <ul id="navbar">
+            <p class="navItem">
                 <a href="/apod"> NASA Pic a day</a>
-            </li>
-            <li class="navItem">
+            </p>
+            <p class="navItem">
                 <a href="/poke"> Random Pokemon</a>
-            </li>
-            <li class="navItem">
+            </p>
+            <p class="navItem">
                 <a href="/starwars"> Random StarWars Chracter</a>
-            </li>
+            </p>
         </ul>
     </div>
     {{{body}}}
