--- a/views/swapi.hbs
+++ b/views/swapi.hbs
@@ -1,3 +1,16 @@
 <div id="swapi">
-    <h1> Your random StarWars character is: {{name}}</h1>
+    <h1> Your random StarWars character is: {{response.name}}</h1>
+    <h2> Height: {{response.height}}cm</h2>
+    <h2> Born: {{response.DOB}}</h2>
+    <form action="/starwars" method="post">
+        <label for="number">Enter number to see character details.</label>
+	    <input type="number" name="number">
+	    <input type="submit" value="submit">
+    </form>
+    {{!-- <ul>
+	{{#each response}}
+		<li>{{@key}} : {{this}}</li>
+	{{/each}}
+    </ul> --}} 
+    {{!-- ^^^ for each loop unnessecary so commented out --}}
 </div>
