--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,4 @@
 <div id="home">
     <h1>Home</h1>
+    <h2>There's not much here right now but click the links in the navbar to explore some other stuff.</h2>
 </div>
