--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,15 @@
 #body {
-    background-color: aqua;
+    background-color: rgb(173, 180, 194);
+    display: flex;
+    flex-direction: column;
     align-content: center;
     text-align: center;
+    margin:0;
 }
-#navbar {
+/* #navbar {
     display: flex;
+    padding: 8px;
+    background-color: rgb(104, 107, 107);
     justify-content: space-evenly;
     flex-direction: row;
 }
@@ -15,4 +20,44 @@
     text-decoration: none;
     font-size: 15pt;
     color: black;
+} */
+#navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+.navItem {
+    float: left;
+    width:25%;
+  }
+  
+.navItem a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+.navItem a:hover {
+    background-color: #111;
+  }
+#footer {
+    background-color: #333;
+    margin-top: auto;
+    text-align: center;
+    height: 50px;
+    width:100%;
+}
+#footer a{
+    padding:17px;
+    color: white;
+    text-decoration: none;
+}
+#footer a:hover {
+    background-color: #111;
 }
